Reformatted EJS files

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -25,8 +25,7 @@
 </form>
 <div>
   <% books.forEach(book => { %>
-  <a href="/books/<%= book.id %> ">
-    <img height="150" src="<%= book.coverImagePath %>" />
-  </a>
+    <a href="/books/<%= book.id %> ">
+      <img height="150" src="<%= book.coverImagePath %>"/></a>
   <% }) %>
 </div>
