--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,6 @@
 <div>
   <% books.forEach(book => { %>
   <a href="/books/<%= book.id%>">
-    <img height="150" width="100" src="<%= book.coverImagePath%>"
-  /></a>
+    <img height="150" width="100" src="<%= book.coverImagePath%>"/></a>
   <% }) %>
 </div>
