--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -32,7 +32,8 @@
     <div class="container">
       <%- include('../partials/header.ejs') %>
       <div class="inner-container">
-        <%- body %> <%- include('../partials/errorMessage.ejs') %>
+        <%- body %> 
+        <%- include('../partials/errorMessage.ejs') %>
       </div>
     </div>
   </body>
