--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,1 +1,3 @@
-<% if (locals.errorMessage != null) { %> <%= locals.errorMessage %> <% } %>
+<% if (locals.errorMessage != null) { %> 
+    <%= locals.errorMessage %> 
+<% } %>
