--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -27,9 +27,5 @@
   <button class="btn btn-primary" type="submit">Search</button>
 </div>
 </form>
-<div>
-  <% books.forEach(book => { %>
-    <a href="/books/<%= book.id %> ">
-      <img height="150" src="<%= book.coverImagePath %>"/></a>
-  <% }) %>
-</div>
+<br>
+<%- include('../partials/bookGrid', { books: books, large: true }) %> 
