--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -3,7 +3,7 @@
   <div class="form-row">
     <div class="form-item">
       <label>Title</label>
-      <input type="text" name="title" value="<%=searchOptions.title%> " />
+      <input type="text" name="title" value="<%=searchOptions.title%>"/>
     </div>
   </div>
 
@@ -13,14 +13,14 @@
       <input
         type="date"
         name="publishedAfter"
-        value="<%=searchOptions.publishedAfter%> "/>
+        value="<%=searchOptions.publishedAfter%>">
     </div>
     <div class="form-item">
       <label>Published Before</label>
     <input
       type="date"
       name="publishedBefore"
-      value="<%=searchOptions.publishedBefore%> "/>
+      value="<%=searchOptions.publishedBefore%>">
     </div>
   </div>
 <div class="form-row form-row-end">
